--- a/index.html
+++ b/index.html
@@ -13,101 +13,42 @@
   </head>
   <body>
     <!-- Navbar -->
-    <nav class="bg-bg-secondary">
-      <div class="text-[24px]">
-        <span>Yogi</span> <span class="text-text-tosca">Nugraha</span
-        ><span>.</span>
-      </div>
-    </nav>
-    <nav
-      class="bg-white border-gray-200 px-2 sm:px-4 py-2.5 rounded dark:bg-gray-900 smooth"
-    >
-      <div
-        class="container flex flex-wrap items-center justify-between mx-auto"
-      >
-        <a href="https://flowbite.com/" class="flex items-center">
-          <img
-            src="https://flowbite.com/docs/images/logo.svg"
-            class="h-6 mr-3 sm:h-9"
-            alt="Flowbite Logo"
-          />
-          <span
-            class="self-center text-xl font-semibold whitespace-nowrap dark:text-white"
-            >Flowbite</span
-          >
-        </a>
-        <button
-          data-collapse-toggle="navbar-default"
-          type="button"
-          class="inline-flex items-center p-2 ml-3 text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
-          aria-controls="navbar-default"
-          aria-expanded="false"
-        >
-          <span class="sr-only">Open main menu</span>
-          <svg
-            class="w-6 h-6"
-            aria-hidden="true"
-            fill="currentColor"
-            viewBox="0 0 20 20"
-            xmlns="http://www.w3.org/2000/svg"
-          >
-            <path
-              fill-rule="evenodd"
-              d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z"
-              clip-rule="evenodd"
-            ></path>
-          </svg>
-        </button>
-        <div class="hidden w-full md:block md:w-auto" id="navbar-default">
-          <ul
-            class="flex flex-col p-4 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 md:mt-0 md:text-sm md:font-medium md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700"
-          >
-            <li>
-              <a
-                href="#"
-                class="block py-2 pl-3 pr-4 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 dark:text-white"
-                aria-current="page"
-                >Home</a
-              >
-            </li>
-            <li>
-              <a
-                href="#"
-                class="block py-2 pl-3 pr-4 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent"
-                >About</a
-              >
-            </li>
-            <li>
-              <a
-                href="#"
-                class="block py-2 pl-3 pr-4 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent"
-                >Services</a
-              >
-            </li>
-            <li>
-              <a
-                href="#"
-                class="block py-2 pl-3 pr-4 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent"
-                >Pricing</a
-              >
-            </li>
-            <li>
-              <a
-                href="#"
-                class="block py-2 pl-3 pr-4 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent"
-                >Contact</a
-              >
-            </li>
-          </ul>
+    <Header id="header" class="fixed l-0 r-0 w-full py-5 header-scrolled smooth px-[4vw] z-50">
+      <div class="container mx-auto items-center justify-between flex relative">
+        <!-- logo -->
+        <div class="text-[24px] z-10">
+          <span>Yogi</span> <span class="text-text-tosca">Nugraha</span
+          ><span>.</span>
         </div>
+        <!-- End Logo -->
+
+        <!-- Menu -->
+        <nav class="hidden sm:block">
+          <ul class="flex gap-8">
+            <li class="cursor-pointer">Home</li>
+            <li>Home</li>
+            <li>Home</li>
+          </ul>
+        </nav>
+        <button class="p-2"><i class="fa-solid fa-bars fa-lg"></i></button>
+        <div class="flex items-center gap-6 ">
+          <div class="fixed inset-0 -z-1s0 bg-gray-300/60 backdrop-blur" id="headlessui-popover-overlay-:r1h:" aria-hidden="true" data-headlessui-state="open" data-projection-id="15" style="opacity: 1;"></div>
+          <div class="absolute inset-x-0 top-0 z-0 origin-top rounded-b-2xl bg-gray-50 px-6 pb-6 pt-32 shadow-2xl shadow-gray-900/20" id="headlessui-popover-panel-:Rp6H1:" tabindex="-1" data-headlessui-state="open" data-projection-id="16" style="opacity: 1; transform: none;"><div class="space-y-4"><a class="block text-base leading-7 tracking-tight text-gray-700" data-headlessui-state="open" href="/#features">Features</a><a class="block text-base leading-7 tracking-tight text-gray-700" data-headlessui-state="open" href="/#reviews">Reviews</a><a class="block text-base leading-7 tracking-tight text-gray-700" data-headlessui-state="open" href="/#pricing">Pricing</a><a class="block text-base leading-7 tracking-tight text-gray-700" data-headlessui-state="open" href="/#faqs">FAQs</a></div><div class="mt-8 flex flex-col gap-4"><a class="inline-flex justify-center rounded-lg border py-[calc(theme(spacing.2)-1px)] px-[calc(theme(spacing.3)-1px)] text-sm outline-2 outline-offset-2 transition-colors border-gray-300 text-gray-700 hover:border-gray-400 active:bg-gray-100 active:text-gray-700/80" href="/login">Log in</a><a class="inline-flex justify-center rounded-lg py-2 px-3 text-sm font-semibold outline-2 outline-offset-2 transition-colors bg-gray-800 text-white hover:bg-gray-900 active:bg-gray-800 active:text-white/80" href="/#">Download the app</a></div></div>
+        </div>
+        <!-- End Menu -->
+
       </div>
-    </nav>
+    </Header>
     <!-- End Navbar -->
 
     <!-- Main Visual -->
+    <div class="bg-bg-primary h-[1000px]">
+
+    </div>
     <!-- End Main Visual -->
 
     <!-- Footer -->
     <!-- End Footer -->
+    <script src="main.js"></script>
   </body>
 </html>
